entity-registry/src/main/pegasus/com/datahub/test/invalid/InvalidSearchableIndexType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record InvalidSearchableIndexType {
  @Searchable = {
    "fieldName": "textField",
    "indexSettings": [
      { "indexType": "INVALID_TYPE" }
    ]
  }
  textField: string
}